src/snapshots/afrotd__parser__tests__rule_html_1.1.8.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.1.8 Ausnahme-Regelungen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ausnahmen für den Spielbetrieb von Damen-, Jugend-, Hochschul-
                und Schüler-Mannschaften sowie in Aufbauligen werden durch die
                jeweils gültige BSO geregelt.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.1.8"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
