src/snapshots/afrotd__parser__tests__rule_html_1.2.9.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.2.9 Feldoberfläche
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>
                    <p>
                        Materialien oder Vorrichtungen, die geeignet sind, die
                        Feldoberfläche durch Erhöhen oder Vertiefen zu
                        verändern und somit einem Spieler oder einem Team einen
                        Vorteil verschaffen, sind verboten (Ausnahme: Regel
                        2.16.4.a bis 2.16.4.c).
                    </p>
                    <p>
                        <strong>Strafe: Live Ball Foul, 5 Meter vom Previous
                        Spot [S19].</strong>
                    </p>
                </li>
                <li>Der Referee kann vom Heimteammanagement jegliche
                Verbesserung des Feldes verlangen, die zur ordnungsgemäßen und
                sicheren Durchführung des Spieles erforderlich ist.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.2.9"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
